--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
     </h1>
     <nav>
       <!-- Unordered list element -->
-      <ul>
-        <!-- List item element-->
-        <li>
-          <!-- Anchor element -->
-          <a href="#what-we-do">What We Do</a>
-        </li>
-        <li>
-          <a href="#what-you-do">What You Do</a>
-        </li>
-        <li>
-          <a href="#your-trainers">Your Trainers</a>
-        </li>
-        <li>
-          <a href="#reach-out">Reach Out</a>
-        </li>
+        <ul>
+          <!-- List item element-->
+          <li>
+            <!-- Anchor element -->
+            <a href="#what-we-do">What We Do</a>
+          </li>
+          <li>
+            <a href="#what-you-do">What You Do</a>
+          </li>
+          <li>
+            <a href="#your-trainers">Your Trainers</a>
+          </li>
+          <li>
+            <a href="#reach-out">Reach Out</a>
+          </li>
       </ul>
     </nav>
   </header>
@@ -155,8 +155,8 @@
   </section>
 
   <!-- "reach out" section -->
-  <section>
-    <h2>Reach Out</h2>
+  <section id="reach-out" class="contact">
+    <h2 class="section-title secondary-border">Reach Out</h2>
     <div class="contact-info">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3436.0133250348495!2d-97.60266138569109!3d30.548927581701584!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644da6fe1b38949%3A0x893d7a6a85176ff9!2s5801%20Othello%20Pl%2C%20Round%20Rock%2C%20TX%2078665!5e0!3m2!1sen!2sus!4v1616363404685!5m2!1sen!2sus"
        width="400" 
