finished the project

--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
     </h1>
     <nav>
       <!-- Unordered list element -->
-        <ul>
-          <!-- List item element-->
-          <li>
-            <!-- Anchor element -->
-            <a href="#what-we-do">What We Do</a>
-          </li>
-          <li>
-            <a href="#what-you-do">What You Do</a>
-          </li>
-          <li>
-            <a href="#your-trainers">Your Trainers</a>
-          </li>
-          <li>
-            <a href="#reach-out">Reach Out</a>
-          </li>
+      <ul>
+        <!-- List item element-->
+        <li>
+          <!-- Anchor element -->
+          <a href="#what-we-do">What We Do</a>
+        </li>
+        <li>
+          <a href="#what-you-do">What You Do</a>
+        </li>
+        <li>
+          <a href="#your-trainers">Your Trainers</a>
+        </li>
+        <li>
+          <a href="#reach-out">Reach Out</a>
+        </li>
       </ul>
     </nav>
   </header>
@@ -158,12 +158,10 @@
   <section id="reach-out" class="contact">
     <h2 class="section-title secondary-border">Reach Out</h2>
     <div class="contact-info">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3436.0133250348495!2d-97.60266138569109!3d30.548927581701584!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644da6fe1b38949%3A0x893d7a6a85176ff9!2s5801%20Othello%20Pl%2C%20Round%20Rock%2C%20TX%2078665!5e0!3m2!1sen!2sus!4v1616363404685!5m2!1sen!2sus"
-       width="400" 
-       height="400" 
-       style="border:0;" 
-       allowfullscreen="" loading="lazy">
-      </iframe>>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12182.30520634488!2d-74.0652613!3d40.2407219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1561060983193!5m2!1sen!2sus"
+        frameborder="0" style="border:0" allowfullscreen>
+      </iframe>
       <div>
         <h3>Run Buddy</h3>
         <p>
@@ -172,10 +170,10 @@
           Let us know and we'll be happy to talk to you!
         </p>
         <address>
-          55 Main Street <br/>
-          Some Town, Ca <br/>
+          55 Main Street <br />
+          Some Town, Ca <br />
           12345<br />
-          P: 555.RUN.BUDZ (555.786.2839)<br/>
+          P: 555.RUN.BUDZ (555.786.2839)<br />
           E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
         </address>
       </div>
@@ -186,7 +184,7 @@
   <footer>
     <h2>❤️ Made with love by Run Buddy.</h2>
     <div>
-      <a href="#">Read Our Privacy Policy</a><br />
+      <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
       &copy; 2019 Run Buddy, Inc.
     </div>
   </footer>
